--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon DEBUG=icps-manage:* ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-stylus": "^0.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nib": "^1.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-plugin-vue": "^7.9.0",
+    "nodemon": "^2.0.7"
   }
 }
