--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon DEBUG=icps-manage:* ./bin/www"
+    "dev": "set NODE_ENV=development && nodemon DEBUG=icps-manage:* ./bin/www",
+    "pro": "set NODE_ENV=production && nodemon DEBUG=icps-manage:* ./bin/www"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
