编辑用户、用户类型数据表

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "express-stylus": "^0.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "nib": "^1.1.2"
+    "mysql2": "^2.2.5",
+    "nib": "^1.1.2",
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
