--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-stylus": "^0.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "md5-node": "^1.0.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "nib": "^1.1.2",
