--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "md5-node": "^1.0.1",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "nib": "^1.1.2",
